--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc animate-box">
 							<nav class="fh5co-nav" role="navigation">
-								<div id="fh5co-logo"><a href="./">Indideli</a></div>
+								<div id="fh5co-logo" ><a  style="font-size: 100px" href="./">Indideli.</a></div>
 							</nav>
 							<h1>We Are Coming Soon!</h1>
 
-							<div class="simply-countdown simply-countdown-one"></div>
+							 
 							<div class="row">
 								<div class="col-md-12 desc">
 									<h2>Our webiste is opening soon. <br> Please register to notify you when it's ready!</h2>
