--- a/index2.html
+++ b/index2.html
@@ -32,10 +32,13 @@
 
     <!-- Begin page content -->
     <div class="container">
+      <div class="row">
+         <br>
+      </div>
        <div class='row'>
          
           <div class="col-sm-6">
-            <br><br> <br> <br> <br>
+            
             <h1 class="logo">Indideli.</h1>
  
             <h1 class="heading-text-1" style="line-height:1.1em; "  >
