--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../../favicon.ico">
     <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/sticky-footer/">
 
-    <title>Sticky Footer Template for Bootstrap</title>
+  <title>Indideli | An Online Grocery Platform</title>
 
     <!-- Bootstrap core CSS -->
       <!-- Bootstrap -->
@@ -30,7 +30,7 @@
 
   <body>
 <div class="row" style="border-top: 8px solid #ef5e32;">
-         <br>
+         <br>  <br>
       </div>
     <!-- Begin page content -->
     <div class="container">
