--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc animate-box">
 							<nav class="fh5co-nav" role="navigation">
-								<div id="fh5co-logo" ><a  style="font-size: 100px" href="./">Indideli.</a></div>
+								<div id="fh5co-logo" ><a  style="font-size: 100px" href="./">Indideli</a></div>
 							</nav>
 							<h1>We Are Coming Soon!</h1>
 
 							 
 							<div class="row">
 								<div class="col-md-12 desc">
-									<h2>Our webiste is opening soon. <br> Please register to notify you when it's ready!</h2>
+									<h2>Our webiste is opening soon. <br> Get notified by email when it's ready!</h2>
 									<form class="form-inline" id="fh5co-header-subscribe">
 										<div class="col-md-12 col-md-offset-0">
 											<div class="form-group">
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="bg-cover js-fullheight" style="background-image:url(images/img_bg_1.jpg);">
+		<div class="bg-cover js-fullheight" style="background-image:url(images/img_bg_1.jpg);background-size: 1000px 750px;">
 			
 		</div>
 	</div>
