--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
 
 
   <!-- Custom styles for this template -->
@@ -93,9 +96,11 @@ color:white;
       <div class="row h-100">
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
-            <div class="mb-3 logo" style="margin-top: -50px;">Indideli</div>
-            <p class="mb-5"><b><i>Our webiste is opening soon.<br>
-Get notified by email when it's ready!</b></i></p>
+            <div class="mb-3 logo" style="margin-top: -50px;">Indideli </div>
+<p  class="text-center" style="margin-top:-50px;font-size: 20px;font-family: 'Bad Script', cursive; font-weight: lighter;;">  India's daily grocery destination  </p>
+            
+            <p class="mb-5"> Our webiste is opening soon.<br>
+Get notified by email when it's ready!</p>
             <form>
             <div class="input-group input-group-newsletter">
               <input type="email" class="form-control" placeholder="Get notified by email"  aria-describedby="submit-button" style="border:1px solid white;">
