--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ color:white;
             <div class="mb-3 logo" style="margin-top: -50px;">Indideli </div>
 <p  class="text-center" style="margin-top:-50px;font-size: 20px;font-family: 'Bad Script', cursive; font-weight: lighter;;">  India's daily grocery destination  </p>
             
-            <p class="mb-5"> Our webiste is opening soon.<br>
+            <p class="mb-5"> We are opening soon.<br>
 Get notified by email when it's ready!</p>
             <form>
             <div class="input-group input-group-newsletter">
