--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     .overlay {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 35%;
     height: 100%;
-    width: 100%;
+    width: 65%;
     background-color: #cd9557;
-    opacity: .9;
+    opacity: .99;
     z-index: 1;
     background: url('./img/img_bg_1.jpg');
-    background-size: 2200px 1000px;
+    background-size:1080px 750px;
     background-repeat: no-repeat;
 }
 
@@ -52,12 +52,13 @@
 .submit{
 background-color: #f5be01;border:1px solid white;
 color:white;
+animation: change_background 20s infinite;
 
 }
  .submit:hover{
-background-color: #f5be01;border:2px solid #ef5e32;
+background-color: #f5be01;border:2px solid white;
 color:white;
-
+animation: change_background 20s infinite;
 
 }
 .social-icons ul > li > a {
@@ -69,18 +70,20 @@ color:white;
     line-height: 4rem;
     height: 4rem;
     width: 4rem;
+    animation: change_background 20s infinite;
 }
 
 .social-icons ul > li > a:hover {
     display: block;
     color: white;
     background-color: #f5be01;
-    border:2px solid #ef5e32;
+    border:2px solid white;
     border-radius: 100%;
     font-size: 2rem;
     line-height: 4rem;
     height: 4rem;
     width: 4rem;
+
 }
   </style>
 </head>
@@ -97,9 +100,9 @@ color:white;
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
             <div class="mb-3 logo" style="margin-top: -50px;">Indideli </div>
-<p  class="text-center" style="margin-top:-50px;font-size: 20px;font-family: 'Bad Script', cursive; font-weight: lighter;;">  India's daily grocery destination  </p>
+<p  class="text-center" style="margin-top:-50px;font-size: 22px;font-family: 'Bad Script', cursive; font-weight: lighter;;">  Your One-Click Supermarket </p>
             
-            <p class="mb-5"> We are opening soon.<br>
+            <p class="mb-5"> We are comming soon.<br>
 Get notified by email when it's ready!</p>
             <form>
             <div class="input-group input-group-newsletter">
