--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@ color:white;
 }
 
 
+@media (max-width: 400px) {
+   
+    .overlay {
+    position: absolute;
+    top: 65%;
+    left: 0;
+    height: 45%;
+    width: 100%;
+    background-color: red;
+    opacity: .99; 
+
+    z-index: 1;
+    background: url(./img/img_bg_1.jpg);;
+    background-size:400px 300px;
+    background-repeat: no-repeat;
+}
+
+}
+
   </style>
 </head>
 
