--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@ color:white;
       <div class="row h-100">
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
-            <div class="mb-3 logo" style="margin-top: -50px;">Indideli </div>
-<p  class="text-right" style="margin-top:-50px;font-size: 20px;font-family: 'Bad Script', cursive; font-weight: lighter;;">  your one-click supermarket&nbsp;</p>
+            <div class="mb-3 logo text-center" style="margin-top: -50px;">Indideli </div>
+<p  class="text-center" style="margin-top:-55px;font-size: 20px;font-family: 'Bad Script', cursive; font-weight: lighter;;">  your one-click supermarket</p>
              
           
-            <form>
+            <form class="center-block">
                 <p class="mb-5" style="margin-bottom: 2rem!important;"> We are comming soon.<br>
 Get notified by email when it's ready!</p>
             <div class="input-group input-group-newsletter">
