--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ color:white;
              
           
             <form class="center-block">
-                <p class="mb-5" style="margin-bottom: 2rem!important;"> We are comming soon.<br>
+                <p class="mb-5" style="margin-bottom: 2rem!important;"> We are coming soon.<br>
 Get notified by email when it's ready!</p>
             <div class="input-group input-group-newsletter">
               <input type="email" class="form-control" placeholder="Get notified by email"  aria-describedby="submit-button" style="border:1px solid white;">
