--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ color:white;
             <img src="./img/logo.jpg" class="mx-auto d-block" style="max-width: 350px;"/>
 <p  class="tagline">  your one-click supermarket</p>
              
- <br><br>
+ <br> 
             <form class="center-block">
-                <p class="mb-5" style="margin-bottom: 2rem!important;"> We are coming soon.<br>
+                <p class="mb-5" style="margin-bottom: 2rem!important;font-size: 1.1rem!important;"> We are coming soon.<br>
 Get notified by email when it's ready!</p>
             <div class="input-group input-group-newsletter">
               <input type="email" class="form-control" placeholder="Get notified by email"  aria-describedby="submit-button" style="font-size:12px;border:1px solid white;">
