--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 }
 
 .submit{
-background-color: #f6ba00;border:1px solid white;
+background-color: #FCC52A;border:1px solid white;
 color:white;
  
 
@@ -72,7 +72,7 @@ color:white;
 .social-icons ul > li > a {
     display: block;
     color: white;
-    background-color: #f6ba00;
+    background-color: #FCC52A;
     border-radius: 100%;
     font-size: 1.5rem;
     line-height: 3rem;
@@ -94,7 +94,10 @@ color:white;
 
 }
 
+.logo-section{
+margin-top: -100px;
 
+}
 @media (max-width: 600px) {
    
     .overlay {
@@ -115,7 +118,9 @@ color:white;
 .tagline{
   text-align: center;
 }
-
+.logo-section{
+  margin-top: -10px;
+}
 }
 
   </style>
@@ -132,13 +137,13 @@ color:white;
     <div class="container h-100">
       <div class="row h-100">
         <div class="col-12 my-auto">
-          <div class="masthead-content text-white py-5 py-md-0">
-            <img src="./img/logo.jpg" class="mx-auto d-block" style="max-width: 350px;"/>
+          <div class="masthead-content  text-white py-5 py-md-0 logo-section" style="">
+            <img src="./img/logo.jpg" class="mx-auto d-block" style=";max-width: 400px;"/>
 <p  class="tagline">  your one-click supermarket</p>
              
- <br> 
-            <form class="center-block">
-                <p class="mb-5" style="margin-bottom: 2rem!important;font-size: 1.1rem!important;"> We are coming soon.<br>
+ <br> <br><br><br>
+            <form class="center-block" style="margin-left: 10px;">
+                <p class="mb-5" style="margin-bottom: 2rem!important;font-size: 1.0rem!important;"> We are coming soon.<br>
 Get notified by email when it's ready!</p>
             <div class="input-group input-group-newsletter">
               <input type="email" class="form-control" placeholder="Get notified by email"  aria-describedby="submit-button" style="font-size:12px;border:1px solid white;">
