--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Get notified by email when it's ready!</p>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://www.facebook.com/Indideli-109958824192087">
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
