--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ margin-top: -100px;
                 <p class="mb-5" style="margin-bottom: 2rem!important;font-size: 1.0rem!important;"> We are coming soon.<br>
 Get notified by email when it's ready!</p>
             <div class="input-group input-group-newsletter">
-              <input type="email" name='email' class="form-control" placeholder="Get notified by email"  aria-describedby="submit-button" style="font-size:12px;border:1px solid white;">
+              <input type="email" name='email' class="form-control" placeholder="Get notified by email"  aria-describedby="submit-button" style="font-size:12px;border:1px solid white;" required>
               <div class="input-group-append">
                 <button type='submit' class="btn submit" type="button" id="submit-button" style="font-size: 10px;font-weight: bold;">Notify Me!</button>
               
