--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ var str = window.location.href;
 var res = str.substring(str.length-10, str.length);
 if(res==='index.html'){
      document.getElementById("email").disabled = true;
-      document.getElementById("demo").innerHTML = "&nbsp;&nbsp;&nbsp;<b>Email has been captured successfully.</b>";
+      document.getElementById("register").innerHTML = "&nbsp;&nbsp;&nbsp;<b>Email has been captured successfully.</b>";
 
   }
 
