--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@ Get notified by email when it's ready!</p>
 document.getElementById("register").innerHTML = "";
 
 var str = window.location.href;
+alert(str);
 var res = str.substring(str.length-10, str.length);
 if(res==='index.html'){
      document.getElementById("email").disabled = true;
